--- a/app/globals.css
+++ b/app/globals.css
@@ -32,6 +32,22 @@ h2 {
   font-size: 24px;
   font-weight: bold;
 }
+
+h3 {
+  color: #262626;
+  line-height: 29px;
+  font-size: 24px;
+  font-weight: bold;
+  letter-spacing: 0;
+}
+
+p {
+  color: #868686;
+  font-size: 12px;
+  letter-spacing: 0;
+  line-height: 19px;
+}
+
 label {
   display: flex;
   flex-direction: column;
