--- a/app/globals.css
+++ b/app/globals.css
@@ -81,7 +81,7 @@ a {
   font-size: 18px;
 }
 
-button {
+button.main {
   height: 39px;
   padding-left: 48px;
   padding-right: 48px;
@@ -93,17 +93,17 @@ button {
   transition: .17s;
 }
 
-button:disabled {
+button.main:disabled {
   background-color: #868686;
   cursor: auto;
 }
 
-button:hover {
+button.main:hover {
   text-decoration: underline;
   background-color: #E95E30;
 }
 
-button:active {
+button.main:active {
   background-color: #FAFAFA;
 }
 
