--- a/app/globals.css
+++ b/app/globals.css
@@ -56,10 +56,10 @@ label {
   margin-bottom: 6px;
 }
 
-input, textarea, select {
+input, textarea, select, .customUploader {
   letter-spacing: auto;
   line-height: normal;
-  padding: 16px;
+  padding: 12px 16px;
   font-size: 12px;
   color: #262626;
   background-color: #FAFAFA;
@@ -67,11 +67,20 @@ input, textarea, select {
   transition-property: outline;
 }
 
+.customUploader {
+  padding: 10px 16px;
+  width: fit-content;
+}
+
+input[type="file"] {
+  display: none;
+}
+
 select {
   color: #262626;
 }
 
-input:focus-visible, textarea:focus-visible, select:focus-visible {
+input:focus-visible, textarea:focus-visible, select:focus-visible, .customUploader:focus-visible {
   outline: solid  #F27623;
   box-shadow: 0px 7px 10px gray;
 }
@@ -82,6 +91,11 @@ form {
 
 a {
   font-size: 18px;
+}
+
+a.navbar-link:focus-visible {
+  outline: 4px solid #E95E30;
+  outline-offset: 3px;
 }
 
 button.main {
